src/styles/styles/_top.scss
/* ... */
// ローディング完了後のスタイル
body#frontpage.loading_container__hidden {
  overflow: initial;

  header#header,
  footer#footer,
  section:not(#fv),
  .text_bridge,
  .fv_scroll_icon {
    animation: FvFadeinMain 2s ease-out forwards;
    animation-delay: 2s;
    opacity: 0;
  }
  main#main {
    opacity: 1;
  }

  #loadingAnimationSub {
    animation: loadingAnimationSub 2s ease-out forwards;
  }

  main#main {
    section#fv {
      .fv_title_inner {
        position: relative;
        z-index: 400;
        overflow: hidden;
        display: inline-block;

        > span {
          display: block;
          position: absolute;
          z-index: 600;
          inset: 0;
          width: 100%;
          height: 100%;
          background-color: #f3f4f9;
          animation: FvFadeinText 3s ease-out forwards;
        }
      }

      .fv_title {
        .fv_title_inner {
          > span {
            animation-delay: 1s;
          }
        }
      }
      .fv_subtitle {
        .fv_title_inner {
          > span {
            animation-delay: 1.5s;
          }
        }
      }
    }
  }
}

// ローディング
#loading_container {
  position: fixed;
  z-index: 800;
  top: 50%;
  right: 50%;
  transform: translate(50%, -50%);
  width: 100vw;
  height: 100vh;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  transition: transform 1s ease, right 1s ease, left 1s ease, top 1s ease,
    width 1s ease, height 1s ease, z-index 1s ease;
  background: transparent;
  overflow: hidden;

  #loadingAnimation {
    display: block;
    height: 100%;
  }

  #skipButton {
    position: absolute;
    bottom: rem(16);
    right: rem(16);
    cursor: pointer;
    font-size: rem(32);
    @include mq(tbsm) {
      font-size: rem(16);
      bottom: rem(54);
    }
  }

  &.hidden {
    position: absolute;
    width: rem(520);
    height: rem(580);
    animation: FvFadeinMainreverse 2s ease forwards 2s,
      loadingContainerMainPC 1s ease forwards 0s;
    @include mq(tbsm) {
      animation: FvFadeinMainreverse 2s ease forwards 2s,
        loadingContainerMainSP 1s ease forwards 0s;
      width: 35vw;
      height: inherit;
      aspect-ratio: 520/580;
    }
    @include mq(splg) {
      width: 70vw;
    }

    lottie-player {
    }

    #skipButton {
      opacity: 0;
      visibility: hidden;
      z-index: -100;
    }
  }
}

#loadingAnimationSub {
  display: none;
  opacity: 0;

  position: absolute;
  z-index: -1;
  right: 0;
  top: rem(70);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  width: rem(520);
  height: rem(580);
  @include mq(tbsm) {
    width: 35vw;
    height: inherit;
    aspect-ratio: 520/580;
  }
  @include mq(splg) {
    width: 70vw;
  }
}

@keyframes FvFadeinText {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(200%);
  }
}
@keyframes FvFadeinMain {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes FvFadeinMainreverse {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes FvFadeinImageSub {
  0% {
    z-index: 9999;
  }
  100% {
    z-index: -1;
  }
}
@keyframes loadingAnimationSub {
  0% {
    opacity: 0;
  }
  80% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes loadingContainerMainPC {
  0% {
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%);
  }
  100% {
    top: rem(70);
    right: 0;
    transform: translate(0, 0);
  }
}
@keyframes loadingContainerMainSP {
  0% {
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%);
  }
  100% {
    top: rem(70);
    right: 0;
    transform: translate(0, 0);
  }
}

